[hw-1] chore: Fix lint violations